CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/THC/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 6.5 REQUIRED)
FIND_PACKAGE(MAGMA)

IF (NOT WIN32)
SET(CMAKE_C_FLAGS "-std=c++14 -Werror=implicit-function-declaration ${CMAKE_C_FLAGS}")
ENDIF (NOT WIN32)
IF(CUDA_HAS_FP16 OR NOT ${CUDA_VERSION} LESS 7.5)
  ADD_DEFINITIONS(-DTH_GENERIC_USE_HALF=1)
  ADD_DEFINITIONS(-DCUDA_HAS_FP16=1)
ENDIF()

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

ADD_SUBDIRECTORY(lib)

INCLUDE_DIRECTORIES(BEFORE "${CMAKE_CURRENT_BINARY_DIR}/lib/THC")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib/THC")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/torch")

SET(src 
	"${CMAKE_CURRENT_SOURCE_DIR}/Storage.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/init.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/Tensor.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/TensorMath.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/TensorOperator.c"
	"${CMAKE_CURRENT_SOURCE_DIR}/torch/utils.c" )
SET(luasrc 
	"${CMAKE_CURRENT_SOURCE_DIR}/init.lua"
	"${CMAKE_CURRENT_SOURCE_DIR}/Tensor.lua"
	"${CMAKE_CURRENT_SOURCE_DIR}/FFI.lua"
	"${CMAKE_CURRENT_SOURCE_DIR}/test/test.lua"
	"${CMAKE_CURRENT_SOURCE_DIR}/test/test_shutdown.lua" )

# Install LUA source files
INSTALL(FILES ${luasrc} DESTINATION ${LUADIR}/cutorch)

# Install compiled C libraries
SET(GCC_COVERAGE_LINK_FLAGS    "-lpthread")
INSTALL(TARGETS cutorch LIBRARY DESTINATION ${LUA_LIBDIR} )
TARGET_LINK_LIBRARIES(cutorch luaT THC)

IF(LUALIB)
  TARGET_LINK_LIBRARIES(cutorch ${LUALIB})
ENDIF()

